starting the html with the title in the header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     
+    <header>
+        <div class="title-div">
+            <h1>EmailJS</h1>
+        </div>
+    </header>
 
 <script src="main.js"></script>
 </body>
