structuring the main

--- a/index.html
+++ b/index.html
@@ -12,10 +12,23 @@
 <body>
     
     <header>
-        <div class="title-div">
-            <h1>EmailJS</h1>
-        </div>
+        <nav>
+            <div class="title-div">
+                <h1>EmailJS</h1>
+            </div>
+        </nav>
     </header>
+    <main>
+        <div class="left-section">
+
+        </div>
+        <div class="right-section">
+
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 
 <script src="main.js"></script>
 </body>
