--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
     </main>
     <footer>
-
+        <div class="credits">
+            made by gluke
+        </div>
     </footer>
 
 <script src="main.js"></script>
