--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </header>
     <main>
         <div class="left-section">
+            <h1>Send us a message!</h1>
+            <p class="subtitle">We are here for you! How can we help?</p>
 
         </div>
         <div class="right-section">
