form container with h2

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <div class="left-section">
             <h1>Send us a message!</h1>
             <p class="subtitle">We are here for you! How can we help?</p>
+            <div class="form-container">
+                <h2>What's up?!</h2>
+                
+            </div>
 
         </div>
         <div class="right-section">
