starting the form with name and subject

--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
             <p class="subtitle">We are here for you! How can we help?</p>
             <div class="form-container">
                 <h2>What's up?!</h2>
-                
+                <form autocomplete="off" id="contactForm">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" required placeholder="What is your name?"
+                                autocomplete="off">
+                        </div>
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input type="text" name="subject" id="subject" required placeholder="What is your need?"
+                                autocomplete="off">
+                        </div>
+                    </div>
+                </form>
             </div>
 
         </div>
