--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
                                 autocomplete="off">
                         </div>
                     </div>
+                      <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required placeholder="Please enter your email"
+                            autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" required placeholder="Enter your message here"
+                            autocomplete="off"></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
                 </form>
             </div>
 
