--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     </div>
                       <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email" required placeholder="Please enter your email"
+                        <input type="email" name="email" id="email" required placeholder="What is your email?"
                             autocomplete="off">
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea name="message" id="message" required placeholder="Enter your message here"
+                        <textarea name="message" id="message" required placeholder="What do you want to ask us?"
                             autocomplete="off"></textarea>
                     </div>
                     <button type="submit">Send Message</button>
