--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
 
         <div class="right-section">
+            <h2>Frequently Asked Questions</h2>
 
         </div>
     </main>
