questions card created

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
         </nav>
     </header>
+    
     <main>
         <div class="left-section">
             <h1>Send us a message!</h1>
@@ -54,9 +55,39 @@
 
         <div class="right-section">
             <h2>Frequently Asked Questions!</h2>
-
+            <div class="question-card">
+                <div class="question-content">
+                    <h3>Question</h3>
+                    <p>Answer</p>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="question-content">
+                    <h3>Question</h3>
+                    <p>Answer</p>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="question-content">
+                    <h3>Question</h3>
+                    <p>Answer</p>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="question-content">
+                    <h3>Question</h3>
+                    <p>Answer</p>
+                </div>
+            </div>
+            <div class="question-card">
+                <div class="question-content">
+                    <h3>Question</h3>
+                    <p>Answer</p>
+                </div>
+            </div>
         </div>
     </main>
+
     <footer>
         <div class="credits">
             made by gluke
