lorem instead of answer in the page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </nav>
     </header>
-    
+
     <main>
         <div class="left-section">
             <h1>Send us a message!</h1>
@@ -64,25 +64,25 @@
             <div class="question-card">
                 <div class="question-content">
                     <h3>Question</h3>
-                    <p>Answer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique, libero minima, reiciendis laborum iste hic consequuntur eos repellat pariatur doloribus obcaecati alias, deserunt accusantium magnam nesciunt cupiditate possimus assumenda!</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
                     <h3>Question</h3>
-                    <p>Answer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus consequatur magnam totam voluptas quisquam veniam veritatis a cum voluptate optio, ratione ad, repellat dignissimos sed? Explicabo voluptates iusto officia!</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
                     <h3>Question</h3>
-                    <p>Answer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolor nesciunt error qui magni quo itaque et sed esse, deleniti consequatur cum eius recusandae labore, laudantium a accusamus tempora neque?</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
                     <h3>Question</h3>
-                    <p>Answer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque modi distinctio excepturi magni, veritatis molestias cum vero? Exercitationem quasi fugit qui ex laborum cum, in beatae est eius provident vitae.</p>
                 </div>
             </div>
         </div>
