div for the success message

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         </div>
     </main>
 
+    <div id="success-message" class="hidden">
+        We received your message!
+    </div>
+
     <footer>
         <div class="credits">
             made by gluke
