--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="title-div">
-
+                <h1>EmailJS</h1>
             </div>
         </nav>
     </header>
@@ -34,7 +34,7 @@
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
-                            <input type="text" name="subject" id="subject" required placeholder="What is your need?"
+                            <input type="text" name="subject" id="su bject" required placeholder="What is your need?"
                                 autocomplete="off">
                         </div>
                     </div>
