credit italic and new h1 title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <div class="title-div">
-                <h1>EmailJS</h1>
+                <h1>Contact Us Form Powered by EmailJS</h1>
             </div>
         </nav>
     </header>
