no more left or right but up and down

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <div class="left-section">
+        <div class="up-section">
             <h1>Send us a message!</h1>
             <p class="subtitle">We are here for you! How can we help?</p>
             <div class="form-container">
@@ -52,7 +52,7 @@
                 </form>
             </div>
         </div>
-        <div class="right-section">
+        <div class="down-section">
             <h2>Frequently Asked Questions!</h2>
             <div class="question-card">
                 <div class="question-content">
