rows numb for the textarea

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             autocomplete="off">
                     </div>
                     <div class="form-group">
-                        <textarea name="message" id="message" required placeholder="What do you want to ask us?"
+                        <textarea rows="5" name="message" id="message" required placeholder="What do you want to ask us?"
                             autocomplete="off"></textarea>
                     </div>
                     <button type="submit">Send Message</button>
