lorem ips answer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="question-card">
                 <div class="question-content">
                     <h3>Question</h3>
-                    <p>Answer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid qui repellat deserunt quisquam repellendus. Unde error accusantium, tempore nisi impedit expedita veniam totam odit? Nostrum quos quo accusamus eum veritatis?</p>
                 </div>
             </div>
             <div class="question-card">
