--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <div class="up-section">
-            <h1>Send us a message!</h1>
+            <h1>Send us a message</h1>
             <p class="subtitle">We are here for you! How can we help?</p>
             <div class="form-container">
                 <form autocomplete="off" id="contactForm">
