--- a/index.html
+++ b/index.html
@@ -54,32 +54,32 @@
             <h2>Frequently Asked Questions!</h2>
             <div class="question-card">
                 <div class="question-content">
-                    <h3>Question</h3>
-                    <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid qui repellat deserunt quisquam repellendus. Unde error accusantium, tempore nisi impedit expedita veniam totam odit? Nostrum quos quo accusamus eum veritatis?</p>
+                    <h3>Question?</h3>
+                    <p class="hidden ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid qui repellat deserunt quisquam repellendus. Unde error accusantium, tempore nisi impedit expedita veniam totam odit? Nostrum quos quo accusamus eum veritatis?</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
-                    <h3>Question</h3>
-                    <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique, libero minima, reiciendis laborum iste hic consequuntur eos repellat pariatur doloribus obcaecati alias, deserunt accusantium magnam nesciunt cupiditate possimus assumenda!</p>
+                    <h3>Question?</h3>
+                    <p class="hidden ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique, libero minima, reiciendis laborum iste hic consequuntur eos repellat pariatur doloribus obcaecati alias, deserunt accusantium magnam nesciunt cupiditate possimus assumenda!</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
-                    <h3>Question</h3>
-                    <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus consequatur magnam totam voluptas quisquam veniam veritatis a cum voluptate optio, ratione ad, repellat dignissimos sed? Explicabo voluptates iusto officia!</p>
+                    <h3>Question?</h3>
+                    <p class="hidden ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatibus consequatur magnam totam voluptas quisquam veniam veritatis a cum voluptate optio, ratione ad, repellat dignissimos sed? Explicabo voluptates iusto officia!</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
-                    <h3>Question</h3>
-                    <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolor nesciunt error qui magni quo itaque et sed esse, deleniti consequatur cum eius recusandae labore, laudantium a accusamus tempora neque?</p>
+                    <h3>Question?</h3>
+                    <p class="hidden ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, dolor nesciunt error qui magni quo itaque et sed esse, deleniti consequatur cum eius recusandae labore, laudantium a accusamus tempora neque?</p>
                 </div>
             </div>
             <div class="question-card">
                 <div class="question-content">
-                    <h3>Question</h3>
-                    <p class="hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque modi distinctio excepturi magni, veritatis molestias cum vero? Exercitationem quasi fugit qui ex laborum cum, in beatae est eius provident vitae.</p>
+                    <h3>Question?</h3>
+                    <p class="hidden ans">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque modi distinctio excepturi magni, veritatis molestias cum vero? Exercitationem quasi fugit qui ex laborum cum, in beatae est eius provident vitae.</p>
                 </div>
             </div>
         </div>
