reorganized css and unsuccess message added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                     We received your message!
                 </div>
 
+                <div id="unsuccess-message" class="hiden">
+                    Something went wrong. Please try again!
+                </div>
+
             </div>
         </div>
         <div class="down-section">
