--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     We received your message!
                 </div>
 
-                <div id="unsuccess-message" class="hiden">
+                <div id="unsuccess-message" class="hidden">
                     Something went wrong. Please try again!
                 </div>
 
